--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
     "version":2,
-    "builds":{
+    "builds":[{
         "src":"./index.js",
-        "use":"@vercel/node" 
-    },
-    "routes":[{
-        "src":"/(.*)",
-        "dest":"/"
+        "use":"@versel/node"
     }]
+    ,
+    "routes":[
+        {
+            "src":"/(.*)" ,
+            "dest":"/"
+        }
+    ]
+
 }
