--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "sass": "^1.62.1"
-  }
+  },
+  "devDependencies": {}
 }
